--- a/Recipes.Persistence/Recipes.Persistence.csproj
+++ b/Recipes.Persistence/Recipes.Persistence.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CWApi.Application\Recipes.Application.csproj" />
+    <ProjectReference Include="..\Recipes.Application\Recipes.Application.csproj" />
   </ItemGroup>
 
 </Project>
