Eventualy fixed issue with db, that i somehow created myself

--- a/Recipes.WebApi/appsettings.json
+++ b/Recipes.WebApi/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "DbConnection": "Data Source = RecipeBook.db" 
+  "DbConnection": "Data Source = RecipeBook.db"
+  //,"SqlServerDbConnect": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=RecipeBook.SqlServer;Integrated Security=True"
 }
