--- a/Recipes.WebApi/Properties/launchSettings.json
+++ b/Recipes.WebApi/Properties/launchSettings.json
@@ -1,27 +1,12 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:51751",
-      "sslPort": 44355
-    }
-  },
   "profiles": {
-    "CWApi.WebApi": {
+    "Recipe.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7082;http://localhost:5292",
+      "applicationUrl": "https://localhost:3001;http://localhost:3000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Debug"
       }
     }
   }
