--- a/Recipes.WebApi/Recipes.WebApi.csproj
+++ b/Recipes.WebApi/Recipes.WebApi.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.15"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Recipes.Application\Recipes.Application.csproj"/>
