--- a/Recipes.WebApi/appsettings.json
+++ b/Recipes.WebApi/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "DbConnection": "Data Source = RecipeBook.db"
-  //,"SqlServerDbConnect": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=RecipeBook.SqlServer;Integrated Security=True"
+  // "DbConnection": "Data Source = RecipeBook.db"
+  "SqlServerDbConnect": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=RecipeBook.API.SqlServer;Integrated Security=True"
 }
